--- a/spring5-recipe-app/pom.xml
+++ b/spring5-recipe-app/pom.xml
@@ -62,6 +62,11 @@
     		<artifactId>bootstrap</artifactId>
     		<version>3.3.7-1</version>
 		</dependency>
+		<dependency>
+			<groupId>commons-httpclient</groupId>
+			<artifactId>commons-httpclient</artifactId>
+			<version>3.1</version>
+		</dependency>
 	</dependencies>
 
 	<build>
